RESOLVED FIXED282991
REGRESSION(285883@main): TestWebKitAPI.CopyHTML.SanitizationPreservesCharacterSet triggers assertions
https://bugs.webkit.org/show_bug.cgi?id=282991
Summary REGRESSION(285883@main): TestWebKitAPI.CopyHTML.SanitizationPreservesCharacte...
Jonathan Bedard
Reported 2024-11-12 09:20:49 PST
TestWebKitAPI.CopyHTML.SanitizationPreservesCharacterSet always triggers an assertion after 285883@main. History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.CopyHTML.SanitizationPreservesCharacterSet Logs of https://build.webkit.org/#/builders/940/builds/3210/steps/18 TestWebKitAPI.CopyHTML.SanitizationPreservesCharacterSet 2024-11-12 05:47:37.757 TestWebKitAPI[25124:4763359] Successfully load keyboard extensions 2024-11-12 05:47:37.759 TestWebKitAPI[25124:4763359] Successfully load keyboard extensions ASSERTION FAILED: isMainRunLoop() /Volumes/Data/worker/Apple-iOS-17-Simulator-Debug-Build/build/Source/WebCore/platform/cocoa/LowPowerModeNotifier.mm(93) : WebCore::LowPowerModeNotifier::~LowPowerModeNotifier() 1 0x129720db0 WebCore::LowPowerModeNotifier::~LowPowerModeNotifier() 2 0x129720ecc WebCore::LowPowerModeNotifier::~LowPowerModeNotifier() 3 0x12cada7c4 WebCore::LowPowerModeNotifier::operator delete(WebCore::LowPowerModeNotifier*, std::destroying_delete_t, unsigned long) 4 0x12cada6fc std::__1::default_delete<WebCore::LowPowerModeNotifier>::operator()[abi:sn170006](WebCore::LowPowerModeNotifier*) const 5 0x12cada66c std::__1::unique_ptr<WebCore::LowPowerModeNotifier, std::__1::default_delete<WebCore::LowPowerModeNotifier>>::reset[abi:sn170006](WebCore::LowPowerModeNotifier*) 6 0x12cada5f4 std::__1::unique_ptr<WebCore::LowPowerModeNotifier, std::__1::default_delete<WebCore::LowPowerModeNotifier>>::~unique_ptr[abi:sn170006]() 7 0x12cab17a4 std::__1::unique_ptr<WebCore::LowPowerModeNotifier, std::__1::default_delete<WebCore::LowPowerModeNotifier>>::~unique_ptr[abi:sn170006]() 8 0x12cab0c34 WebCore::Page::~Page() 9 0x12cab1d88 WebCore::Page::~Page() 10 0x15bbbb7f8 WTF::RefCounted<WebCore::Page>::deref() const 11 0x15bbbb77c WTF::DefaultRefDerefTraits<WebCore::Page>::derefIfNotNull(WebCore::Page*) 12 0x15bb44414 WTF::RefPtr<WebCore::Page, WTF::RawPtrTraits<WebCore::Page>, WTF::DefaultRefDerefTraits<WebCore::Page>>::operator=(std::nullptr_t) 13 0x15bb44168 __29-[WebView(WebPrivate) _close]_block_invoke 14 0x12d37b1a0 (anonymous namespace)::WebThreadBlock::operator()() const 15 0x12d379c0c HandleRunSource(void*) 16 0x109afde48 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 17 0x109afdd90 __CFRunLoopDoSource0 18 0x109afd500 __CFRunLoopDoSources0 19 0x109af7be8 __CFRunLoopRun 20 0x109af74d4 CFRunLoopRunSpecific 21 0x129f77ce8 RunWebThread(void*) 22 0x10da03414 _pthread_start 23 0x10d9fe5e0 thread_start Child process terminated with signal 5: Trace/BPT trap
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-12 09:21:05 PST
Chris Dumez
Comment 2 2024-11-12 13:48:19 PST
EWS
Comment 3 2024-11-12 16:29:55 PST
Committed 286510@main (79c4ba33192d): <https://commits.webkit.org/286510@main> Reviewed commits have been landed. Closing PR #36551 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.