REGRESSION(285883@main): TestWebKitAPI.CopyHTML.SanitizationPreservesCharacterSet triggers assertions https://bugs.webkit.org/show_bug.cgi?id=282991 rdar://139727732

Reviewed by Sihui Liu.

The test is using WK1 and a WebThread on iOS. Our assertions were
using `isMainRunLoop()` instead of `isMainThread()`, which is not
correct in WebCore/ because of the WebThread. Fix those assertions
accordingly.

* Source/WebCore/platform/cocoa/LowPowerModeNotifier.mm:
(-[WebLowPowerModeObserver detach]):
(WebCore::LowPowerModeNotifier::LowPowerModeNotifier):
(WebCore::LowPowerModeNotifier::~LowPowerModeNotifier):

Canonical link: https://commits.webkit.org/286510@main